	- added html_select_time custom function. (Andrei)

Version 1.3.1pl1
--------------
    - bug fix, recovered missing _syntax_error function

Version 1.3.1
-------------
    - document first, last, index_prev, index_next (Monte)
    - added 'first' and 'last' section properties. (Andrei)
    - split out compiling code to separate class for faster template execution
      time (Monte)
    - fixed a couple of minor PHP warnings (Monte)
    - added and documented unregister_modifier() and unregister_function() API
      calls. (Monte)
    - added and documented 'fetch' and 'math' functions. (Monte)
    - added ability to index looped variables by section properties, e.g.
      $foo.index_prev/bar. (Andrei)
    - added index_prev and index_next section properties. (Andrei)
    - fixed issue with php executing in literal blocks. (Monte)

Version 1.3.0
-------------
    - moved license from GPL to LGPL (Monte)
    - implemented workaround for PHP "feature" that eats carriage returns
      if the PHP tag is at the end of the line. (Andrei)
    - removed $allow_php, added $php_handling logic (Monte)
    - added file locking to prevent reader/writer problem. (Andrei)
    - made Smarty catch unimplemented modifiers and custom functions and output
      error messages during compilation instead of failing during run time.
      (Andrei)
    - removed short-tags at the top of the smarty scripts (Monte)
    - added register_function() and register_modifier() API calls to make
      registering stuff easier. (Andrei)
    - added template results caching capability. (Monte, Andrei)
    - added optional 'options' attribute to html_options custom function
      that allows passing associative arrays for values/output. (Andrei)
    - modifier arguments can now contain '|' and ':' characters inside quoted
      strings. (Andrei)

Version 1.2.2
-------------
    - fixed bug that would not respect nested template directories and would